--- a/example/public/manifest.json
+++ b/example/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "react-provider-cache",
-  "name": "react-provider-cache",
+  "short_name": "context-cache-provider",
+  "name": "context-cache-provider",
   "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
