--- a/example/package.json
+++ b/example/package.json
@@ -5,17 +5,17 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "babel-jest": "^23.6.0",
     "browser-history": "1.0.1",
+    "lru_map": "0.3.3",
     "path-match": "1.2.4",
-    "react": "^16.7.0-alpha.0",
-    "react-dom": "^16.7.0-alpha.0",
-    "react-scripts": "2.0.3"
+    "react": "16.7.0-alpha.0",
+    "react-dom": "16.7.0-alpha.0",
+    "react-scripts": "2.0.3",
+    "xxhashjs": "0.2.2"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "unlink node_modules/context-cache-provider && ln -s ../../ node_modules/context-cache-provider && react-scripts start",
-
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
