--- a/example/package.json
+++ b/example/package.json
@@ -11,11 +11,12 @@
     "react": "16.7.0-alpha.0",
     "react-dom": "16.7.0-alpha.0",
     "react-scripts": "2.0.3",
-    "xxhashjs": "0.2.2"
+    "xxhashjs": "0.2.2",
+    "context-cache-provider": "^1.0.1"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "react-scripts start",
+    "start": "unlink ./node_modules/context-cache-provider; ln -s ../../ ./node_modules/context-cache-provider && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
