--- a/example/package.json
+++ b/example/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "unlink ./node_modules/context-cache-provider; ln -s ../../ ./node_modules/context-cache-provider && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
