--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
     "xxhashjs": "0.2.2"
   },
   "devDependencies": {
-    "react-scripts": "2.0.3",
-    "gh-pages": "^1.2.0",
     "babel-core": "^6.26.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
@@ -41,6 +39,10 @@
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^3.1.0",
+    "gh-pages": "^1.2.0",
+    "jest-dom": "^2.1.1",
+    "react-scripts": "2.0.3",
+    "react-testing-library": "^5.2.3",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
